# rmpAPI

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/routers/: professor_router.py  school_router.py
app/schemas/: professor_schema.py  school_schema.py
app/services/: rmp_scraper.py
